--- a/src/app/ocorrencias/ocorrencias.component.html
+++ b/src/app/ocorrencias/ocorrencias.component.html
@@ -20,7 +20,7 @@
             <label for="estado" class="form-label">Estado da Ocorrência</label><br>
             <input type="text" class="form-control" id="estado" formControlName="id" />
           </div>
-          <button type="submit" class="btn btn-primary" (click)="save()"> <!--((click)="save()") salva as informações-->
+          <button type="submit" class="btn btn-primary"> <!--((click)="save()") salva as informações-->
             Salvar
           </button>
           <br><br>
