--- a/src/app/atendimentos-veiculos/atendimentos-veiculos.component.html
+++ b/src/app/atendimentos-veiculos/atendimentos-veiculos.component.html
@@ -1,1 +1,48 @@
-<p>atendimentos-veiculos works!</p>
+<app-navbar></app-navbar>
+<div class="container bg-light p-4">
+  <div class="row">
+    <div class="col-7 m-auto">
+      <h1 class="text-center">Atendimentos Veiculos</h1>
+      <form>
+        <div class="mb-3">
+          <label for="id_atendimento" class="form-label">ID Atendimento</label><br>
+          <input type="text" class="form-control" id="atendimento" formControlName="atendimento" />
+        </div>
+        <div class="mb-3">
+          <label for="id_veiculo" class="form-label">ID Veiculo</label><br>
+          <input type="text" class="form-control" id="id_veiculo" formControlName="id_veiculo" />
+        </div>
+        <button type="submit" class="btn btn-primary"> <!--((click)="save()") salva as informações-->
+          Salvar
+        </button>
+        <br><br>
+      </form>
+    </div>
+    <div class="col-5 m-auto">
+      <h2 class="text-center">Tabela de Atendimentos por Veículo</h2>
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col">ID Atendimento</th>
+            <th scope="col">ID Veículo</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>Jacob</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+<app-footer></app-footer>
