--- a/src/app/equipes/equipes.component.html
+++ b/src/app/equipes/equipes.component.html
@@ -1,1 +1,46 @@
-<p>equipes works!</p>
+<div class="container bg-light p-4">
+  <div class="row">
+    <div class="col-7 m-auto">
+      <h1 class="text-center">Equipes</h1>
+      <form>
+        <div class="mb-3">
+          <label for="id_equipe" class="form-label">ID Equipe</label><br>
+          <input type="text" class="form-control" id="id_equipe" formControlName="id_equipe" />
+        </div>
+        <div class="mb-3">
+          <label for="nome_equipe" class="form-label">Nome da Equipe</label><br>
+          <input type="text" class="form-control" id="nome_equipe" formControlName="nome_equipe" />
+        </div>
+        <button type="submit" class="btn btn-primary"> <!--((click)="save()") salva as informações-->
+          Salvar
+        </button>
+        <br><br>
+      </form>
+    </div>
+    <div class="col-5 m-auto">
+      <h2 class="text-center">Tabela de Equipes</h2>
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Equipes</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
