--- a/src/app/atendimento/atendimento.component.html
+++ b/src/app/atendimento/atendimento.component.html
@@ -1,5 +1,4 @@
-<app-navbar></app-navbar>
-<div class="container bg-light p-4">
+<div class="container bg-light p-4 m-5">
   <div class="row">
     <div class="col-7 m-auto">
       <h1 class="text-center">Atendimentos</h1>
@@ -53,4 +52,3 @@
     </div>
   </div>
 </div>
-<app-footer></app-footer>
