--- a/src/app/atendimentos-veiculos/atendimentos-veiculos.component.html
+++ b/src/app/atendimentos-veiculos/atendimentos-veiculos.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<div class="container bg-light p-4">
+<div class="container bg-light p-4 m-5">
   <div class="row">
     <div class="col-7 m-auto">
       <h1 class="text-center">Atendimentos Veiculos</h1>
