--- a/src/app/equipes/equipes.component.html
+++ b/src/app/equipes/equipes.component.html
@@ -1,4 +1,4 @@
-<div class="container bg-light p-4">
+<div class="container bg-light p-4 m-5">
   <div class="row">
     <div class="col-7 m-auto">
       <h1 class="text-center">Equipes</h1>
