--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,18 +1,27 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark p-2">
-  <a class="navbar-brand" href="#">Siga</a>
+  <a class="navbar-brand" href="#">Emergência</a>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       <li class="nav-item active">
-        <a class="nav-link" routerLink="">Inicio</a>
+        <a class="nav-link" routerLink=""><fa-icon [icon]="'home'"></fa-icon>Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/atendimentos">Atendimentos</a>
+        <a class="nav-link" routerLink="/ocorrencias">Ocorrências</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/funcionarios">Funcionarios</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/equipes">Equipes</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" routerLink="/veiculos">Veiculos</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" routerLink="/atendimento-veiculos">Atendimento Veiculos</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/turnos">Turnos</a>
       </li>
     </ul>
   </div>
