--- a/src/app/atendimentos-veiculos/atendimentos-veiculos.component.html
+++ b/src/app/atendimentos-veiculos/atendimentos-veiculos.component.html
@@ -1,8 +1,8 @@
 <app-navbar></app-navbar>
 <div class="container bg-light p-4 m-5">
-  <div class="row">
-    <div class="col-7 m-auto">
-      <h1 class="text-center">Atendimentos Veiculos</h1>
+  <div class="row m-auto">
+    <div class="col-7">
+      <h1 class="text-center">Cadastrar Uso de Veiculo</h1>
       <form>
         <div class="mb-3">
           <label for="id_atendimento" class="form-label">ID Atendimento</label><br>
@@ -18,8 +18,8 @@
         <br><br>
       </form>
     </div>
-    <div class="col-5 m-auto">
-      <h2 class="text-center">Tabela de Atendimentos por Veículo</h2>
+    <div class="col-5">
+      <h2 class="text-center">Veiculos Usados</h2>
       <table class="table table-striped">
         <thead>
           <tr>
