--- a/src/app/funcionarios/funcionarios.component.html
+++ b/src/app/funcionarios/funcionarios.component.html
@@ -1,7 +1,7 @@
 <div class="container bg-light p-4 m-5">
-  <div class="row">
-    <div class="col-7 m-auto">
-      <h1 class="text-center">Funcionarios</h1>
+  <div class="row m-auto">
+    <div class="col-7">
+      <h1 class="text-center">Cadastrar Funcionarios</h1>
       <form>
         <div class="mb-3">
           <label for="id_funcionario" class="form-label">ID Funcionario</label><br>
@@ -21,8 +21,8 @@
         <br><br>
       </form>
     </div>
-    <div class="col-5 m-auto">
-      <h2 class="text-center">Tabela de Funcionarios</h2>
+    <div class="col-5">
+      <h2 class="text-center">Funcionarios</h2>
       <table class="table table-striped">
         <thead>
           <tr>
