--- a/src/app/ocorrencias/ocorrencias.component.html
+++ b/src/app/ocorrencias/ocorrencias.component.html
@@ -1,49 +1,51 @@
-  <div class="container bg-light p-4">
-    <div class="row">
-      <h2 class="text-center">Cadastro de Ocorrencias</h2>
-      <div class="col-7 m-auto">
-        <form>
-          <div class="mb-3">
-            <label for="ocorrencia" class="form-label">Tipo de Ocorrência</label><br>
-            <input type="text" class="form-control" id="ocorrencia" formControlName="id" />
-          </div>
-          <div class="mb-3">
-            <label for="estado" class="form-label">Estado da Ocorrência</label><br>
-            <input type="text" class="form-control" id="estado" formControlName="id" />
-          </div>
-          <button type="submit" class="btn btn-primary"> <!--((click)="save()") salva as informações-->
-            Salvar
-          </button>
-          <br><br>
-        </form>
-      </div>
-      <div class="col-5 m-auto">
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th scope="col">ID</th>
-              <th scope="col">Ocorrencias</th>
-              <th scope="col">Status</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th scope="row">1</th>
-              <td>Mark</td>
-              <td>Otto</td>
-            </tr>
-            <tr>
-              <th scope="row">2</th>
-              <td>Jacob</td>
-              <td>Thornton</td>
-            </tr>
-            <tr>
-              <th scope="row">2</th>
-              <td>Jacob</td>
-              <td>Thornton</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+<div class="container bg-light p-4 m-5">
+  <div class="row m-auto">
+    <div class="col-7">
+
+      <h1 class="text-center">Cadastrar Ocorrências</h1>
+      <form>
+        <div class="mb-3">
+          <label for="ocorrencia" class="form-label">Tipo de Ocorrência</label><br>
+          <input type="text" class="form-control" id="ocorrencia" formControlName="id" />
+        </div>
+        <div class="mb-3">
+          <label for="estado" class="form-label">Estado da Ocorrência</label><br>
+          <input type="text" class="form-control" id="estado" formControlName="id" />
+        </div>
+        <button type="submit" class="btn btn-primary"> <!--((click)="save()") salva as informações-->
+          Salvar
+        </button>
+        <br><br>
+      </form>
+    </div>
+    <div class="col-5">
+      <h2 class="text-center">Ocorrências</h2>
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Ocorrencias</th>
+            <th scope="col">Status</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
+</div>
