--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,7 +3,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
       <li class="nav-item active">
-        <a class="nav-link" routerLink=""><fa-icon [icon]="'home'"></fa-icon>Home</a>
+        <a class="nav-link" routerLink="">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/ocorrencias">Ocorrências</a>
