--- a/src/app/funcionarios/funcionarios.component.html
+++ b/src/app/funcionarios/funcionarios.component.html
@@ -2,20 +2,26 @@
   <div class="row m-auto">
     <div class="col-7">
       <h1 class="text-center">Cadastrar Funcionarios</h1>
-      <form>
-        <div class="mb-3">
-          <label for="id_funcionario" class="form-label">ID Funcionario</label><br>
-          <input type="number" class="form-control" id="id_funcionario" formControlName="id_funcionario" />
-        </div>
+      <form [formGroup]="formGroupFuncionarios">
         <div class="mb-3">
           <label for="nome_funcionario" class="form-label">Nome</label><br>
           <input type="text" class="form-control" id="nome_funcionario" formControlName="nome_funcionario" />
+          <small *ngIf="nome_funcionario.hasError('required')" class="text-danger p-1">
+            * O nome do funcionario não poder estar vazio. Preencha-o!
+          </small>
         </div>
         <div class="mb-3">
           <label for="cargo" class="form-label">Cargo</label><br>
           <input type="text" class="form-control" id="cargo" formControlName="cargo" />
+          <small *ngIf="cargo.hasError('required')" class="text-danger p-1">
+            * O cargo não poder estar vazio. Preencha-o!
+          </small>
         </div>
-        <button type="submit" class="btn btn-primary"> <!--((click)="save()") salva as informações-->
+        <button type="submit"
+        [disabled]="!formGroupFuncionarios.valid"
+        class="btn btn-primary"
+        (click)="save()"
+        >
           Salvar
         </button>
         <br><br>
@@ -32,20 +38,10 @@
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Mark</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Mark</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Mark</td>
+          <tr *ngFor="let funcionario of funcionarios">
+            <th scope="row">{{funcionario.id_funcionario}}</th>
+            <td>{{funcionario.nome_funcionario}}</td>
+            <td>{{funcionario.cargo}}</td>
           </tr>
         </tbody>
       </table>
