--- a/src/app/equipes/equipes.component.html
+++ b/src/app/equipes/equipes.component.html
@@ -1,6 +1,6 @@
 <div class="container bg-light p-4 m-5">
   <div class="row m-auto">
-    <div class="col-7">
+    <div class="col-6">
       <h1 class="text-center">Cadastrar Equipes</h1>
       <form [formGroup]="formGroupEquipes">
         <div class="mb-3">
@@ -16,13 +16,14 @@
         <br><br>
       </form>
     </div>
-    <div class="col-5">
+    <div class="col-6">
       <h2 class="text-center">Equipes</h2>
       <table class="table table-striped">
         <thead>
           <tr>
             <th scope="col">ID</th>
             <th scope="col">Equipes</th>
+            <th scope="col" colspan="2">Opções</th>
           </tr>
         </thead>
         <tbody>
